// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useCollapseTransition should apply the correct appear transitionDuration 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
    data-testid="element"
    style="max-height: 0; padding-top: 0px; padding-bottom: 0px; transition-duration: 100ms;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should apply the correct appear transitionDuration 2`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse"
    data-testid="element"
    style="padding-top: 0px; padding-bottom: 0px;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should apply the correct appear transitionDuration 3`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse rmd-collapse--leave rmd-collapse--no-overflow"
    data-testid="element"
    style="padding-top: 0px; padding-bottom: 0px; max-height: 0; transition-duration: 200ms;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should apply the correct appear transitionDuration 4`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`useCollapseTransition should apply the correct appear transitionDuration 5`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
    data-testid="element"
    style="max-height: 0; padding-top: 0px; padding-bottom: 0px; transition-duration: 250ms;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should apply the correct appear transitionDuration 6`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse"
    data-testid="element"
    style="padding-top: 0px; padding-bottom: 0px;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should apply the hidden attribute if the temporary behavior is disabled 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse rmd-collapse--no-overflow"
    data-testid="element"
    hidden=""
    style="max-height: 0; padding-top: 0px; padding-bottom: 0px;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should apply the hidden attribute if the temporary behavior is disabled 2`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
    data-testid="element"
    style="max-height: 0; padding-top: 0px; padding-bottom: 0px; transition-duration: 250ms;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should apply the hidden attribute if the temporary behavior is disabled 3`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse"
    data-testid="element"
    style="padding-top: 0px; padding-bottom: 0px;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should apply the hidden attribute if the temporary behavior is disabled 4`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse rmd-collapse--leave rmd-collapse--no-overflow"
    data-testid="element"
    style="padding-top: 0px; padding-bottom: 0px; max-height: 0; transition-duration: 200ms;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should apply the hidden attribute if the temporary behavior is disabled 5`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse rmd-collapse--no-overflow"
    data-testid="element"
    hidden=""
    style="padding-top: 0px; padding-bottom: 0px; max-height: 0;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should default to not being temporary if the minHeight, minPaddingTop, or minPaddingBottom are not 0 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse rmd-collapse--no-overflow"
    data-testid="element"
    style="max-height: 120px; padding-top: 0px; padding-bottom: 0px;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should default to not being temporary if the minHeight, minPaddingTop, or minPaddingBottom are not 0 2`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse rmd-collapse--no-overflow"
    data-testid="element"
    style="max-height: 0; padding-top: 0px; padding-bottom: 16px;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should default to not being temporary if the minHeight, minPaddingTop, or minPaddingBottom are not 0 3`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse rmd-collapse--no-overflow"
    data-testid="element"
    style="max-height: 0; padding-top: 8px; padding-bottom: 0px;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should default to not being temporary if the minHeight, minPaddingTop, or minPaddingBottom are not 0 4`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`useCollapseTransition should default to not rendering the element when transitionIn is false 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
    data-testid="element"
    style="max-height: 0; padding-top: 0px; padding-bottom: 0px; transition-duration: 250ms;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should default to not rendering the element when transitionIn is false 2`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse"
    data-testid="element"
    style="padding-top: 0px; padding-bottom: 0px;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should default to not rendering the element when transitionIn is false 3`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse rmd-collapse--leave rmd-collapse--no-overflow"
    data-testid="element"
    style="padding-top: 0px; padding-bottom: 0px; max-height: 0; transition-duration: 200ms;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should default to not rendering the element when transitionIn is false 4`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`useCollapseTransition should not apply any class names if the timeout is disabled 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`useCollapseTransition should not apply any class names if the timeout is disabled 2`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
    style="padding-top: 0px; padding-bottom: 0px;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should not apply any class names if the timeout is disabled 3`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
    style="padding-top: 0px; padding-bottom: 0px;"
  >
    This is some content.
  </div>
</div>
`;

exports[`useCollapseTransition should not apply any style if it mounts while transitionIn is true 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-collapse"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;
